# benchproject

./: Cargo.toml  README.md
docker/: README.md  docker-compose.yml
src/: README.md
src/application/: README.md
src/application/services/: README.md
src/application/use_cases/: README.md
src/domain/: README.md
src/domain/entities/: README.md
src/domain/repositories/: README.md
src/domain/value_objects/: README.md
src/infrastructure/: README.md
src/infrastructure/database/: README.md
src/infrastructure/messaging/: README.md
src/infrastructure/services/: README.md
src/interfaces/: README.md
src/interfaces/cli/: README.md
src/interfaces/http/: README.md
src/interfaces/http/views/: README.md
src/interfaces/routes/: README.md
src/tests/: README.md
src/tests/support/: README.md
