[package]
name = "benchproject"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies] # depends on your needs
actix-web = "4"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
log = "0.4.22"
serde_json = "1.0.85"
dotenv = "0.15.0"
serde = { version = "1.0.204", features = ["derive"] }